# qtdbusextended

./: CMakeLists.txt  README.md
rpm/: dbusextended.spec
src/: CMakeLists.txt  dbusextended-qt5.prf.in  dbusextended.pc.in  dbusextendedConfig.cmake.in  dbusextendedabstractinterface.cpp  dbusextendedabstractinterface.h  src.pro
